# knowvember-linear-algebra

./: .gitignore  LICENSE  README.md  linear_algebra.ipynb  linear_algebra_course.py  linear_algebra_engineering_lab.ipynb  linear_algebra_engineering_lab.py  linear_algebra_game_lab.ipynb  linear_algebra_intro_manim.py  linear_algebra_lab.ipynb  linear_regression_from_scratch.ipynb  linear_regression_from_scratch_solved.ipynb  main.py  pyproject.toml  storyboard.md
